fix:boolean option bug
